general updates and remove fonts

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,13 +8,16 @@ workspace = 4,monitor:desc:BOE 0x0BCA
 
 exec-once = hyprpaper
 exec-once = hypridle
+exec-once = hyprsunset
 exec-once = waybar
-exec-once = pipewire
-exec-once = pipewire-pulse
-exec-once = wireplumber
-exec-once = wlsunset -S 7:00 -s 21:00
+#exec-once = pipewire
+#exec-once = pipewire-pulse
+#exec-once = wireplumber
+#exec-once = wlsunset -S 7:00 -s 21:00
+exec-once = systemctl --user start hyprpolkitagent
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
+exec-once = wl-clip-persist --clipboard regular
 exec-once = cliphist wipe
 
 env = HYPRCURSOR_THEME,Posy-Cursor-Mono-Black
