--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -19,6 +19,7 @@ exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 exec-once = wl-clip-persist --clipboard regular
 exec-once = cliphist wipe
+exec-once = packages-history
 
 env = HYPRCURSOR_THEME,Posy-Cursor-Mono-Black
 env = HYPRCURSOR_SIZE,32
