--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,5 +1,5 @@
 monitor = desc:BOE 0x0BCA,2256x1504@60.0,0x0,1.6
-monitor = desc:Dell Inc. DELL U2415 PVJVW5B70A5S,1920x1200@59.95,1410x0,1.0
+monitor=desc:Dell Inc. DELL U2415 PVJVW5B70A5S,1920x1200@59.95,-1920x0,1.0
 
 workspace = 1,monitor:desc:Dell Inc. DELL U2415 PVJVW5B70A5S
 workspace = 2,monitor:desc:Dell Inc. DELL U2415 PVJVW5B70A5S
@@ -25,6 +25,17 @@ env = HYPRCURSOR_THEME,Posy-Cursor-Mono-Black
 env = HYPRCURSOR_SIZE,32
 env = XCURSOR_THEME,Posy-Cursor-Mono-Black
 env = XCURSOR_SIZE,32
+
+env = AQ_DRM_DEVICES,/dev/dri/card1:/dev/dri/card0
+env = LIBVA_DRIVER_NAME,nvidia
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = NVD_BACKEND,direct
+env = AQ_FORCE_LINEAR_BLIT=0
+env = ELECTRON_OZONE_PLATFORM_HINT,auto
+
+opengl {
+    nvidia_anti_flicker = false
+}
 
 input {
     #kb_layout = us
