--- a/.config/tofi/config
+++ b/.config/tofi/config
@@ -13,6 +13,6 @@ border-width = 0
 outline-width = 0
 result-spacing = 8
 num-results = 6
-font = /usr/share/fonts/apple-fonts/SF-Pro.ttf
+#font = /usr/share/fonts/apple-fonts/SF-Pro.ttf
 font-variations = "wght 600"
 font-size = 20
