Add dock lid behaviour

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,5 +1,5 @@
 monitor = desc:BOE 0x0BCA,2256x1504@60.0,0x0,1.6
-monitor=desc:Dell Inc. DELL U2415 PVJVW5B70A5S,1920x1200@59.95,-1920x0,1.0
+monitor=desc:Dell Inc. DELL U2415 PVJVW5B70A5S,1920x1200@60,-1920x0,1.0
 
 workspace = 1,monitor:desc:Dell Inc. DELL U2415 PVJVW5B70A5S
 workspace = 2,monitor:desc:Dell Inc. DELL U2415 PVJVW5B70A5S
@@ -26,7 +26,7 @@ env = HYPRCURSOR_SIZE,32
 env = XCURSOR_THEME,Posy-Cursor-Mono-Black
 env = XCURSOR_SIZE,32
 
-env = AQ_DRM_DEVICES,/dev/dri/card1:/dev/dri/card0
+env = AQ_DRM_DEVICES,/dev/dri/card0:/dev/dri/card1
 env = LIBVA_DRIVER_NAME,nvidia
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = NVD_BACKEND,direct
@@ -58,6 +58,7 @@ general {
     gaps_out = 4
     border_size = 0
     layout = master
+    allow_tearing = true
 }
 
 decoration {
@@ -114,12 +115,21 @@ misc {
     force_default_wallpaper = 0
     disable_hyprland_logo = true
     disable_splash_rendering = true
+    vfr = false
+    vrr = 0
 }
 
 layerrule = blur,waybar
+windowrule = immediate, title:^(Minecraft\*) 
 #windowrule = float,class:(org.pulseaudio.pavucontrol)
 #windowrule = center,class:(org.pulseaudio.pavucontrol)
 #windowrule = opacity 0.99 0.99, class:^(zen)$
+
+# On lid close: move workspace 4 to Dell and disable BOE
+bindl = , switch:on:Lid Switch, exec, hyprctl dispatch moveworkspacetomonitor 4 "desc:Dell Inc. DELL U2415 PVJVW5B70A5S" && hyprctl keyword monitor "desc:BOE 0x0BCA, disable"
+
+# On lid open: move workspace 4 back to BOE and re-enable BOE
+bindl = , switch:off:Lid Switch, exec, hyprctl dispatch moveworkspacetomonitor 4 "desc:BOE 0x0BCA" && hyprctl keyword monitor "desc:BOE 0x0BCA, 2256x1504@60.0,0x0,1.6"
 
 bind = SUPER, Q, killactive,
 bind = SUPER, E, exec, $TERMINAL
