add waybar config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -26,7 +26,9 @@ env = HYPRCURSOR_SIZE,32
 env = XCURSOR_THEME,Posy-Cursor-Mono-Black
 env = XCURSOR_SIZE,32
 
-env = AQ_DRM_DEVICES,/dev/dri/card0:/dev/dri/card1
+env = AQ_DRM_DEVICES,/dev/dri/nvidia-egpu:/dev/dri/amd-igpu
+#env = AQ_DRM_DEVICES,/dev/dri/amd-igpu
+
 env = LIBVA_DRIVER_NAME,nvidia
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = NVD_BACKEND,direct
@@ -46,6 +48,10 @@ input {
         natural_scroll = true
         disable_while_typing = false
     }
+}
+
+cursor {
+    no_hardware_cursors = true
 }
 
 gestures {
@@ -121,6 +127,7 @@ misc {
 
 layerrule = blur,waybar
 windowrule = immediate, title:^(Minecraft\*) 
+windowrulev2 = float, title:^(.*Hyprshot.*)$
 #windowrule = float,class:(org.pulseaudio.pavucontrol)
 #windowrule = center,class:(org.pulseaudio.pavucontrol)
 #windowrule = opacity 0.99 0.99, class:^(zen)$
@@ -152,9 +159,8 @@ binde = , XF86MonBrightnessDown, exec, backlight down
 binde = , XF86MonBrightnessUp, exec, backlight up
 
 
-bind = , Print, exec, grimblast copysave screen ~/$(date +%Y-%m-%dT%H:%M:%S).png
+bind = , Print, exec, hyprshot-gui
 bind = , XF86AudioMedia, exec, record
-bind = ALT, Print, exec, grimblast copysave area ~/$(date +%Y-%m-%dT%H:%M:%S).png
 binds = ALT, XF86AudioMedia, exec, record-slurp
 
 bind = SUPER, h, movefocus, l
