migrate to github

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,5 +1,6 @@
-monitor = desc:BOE 0x0BCA,2256x1504@60.0,0x0,1.6
-monitor=desc:Dell Inc. DELL U2415 PVJVW5B70A5S,1920x1200@60,-1920x0,1.0
+monitor=desc:Dell Inc. DELL U2312HM T9MJ3254AUBL,1920x1080@60,-1080x0,1.0,transform,1
+monitor=desc:Dell Inc. DELL U2415 PVJVW5B70A5S,1920x1200@60,0x0,1.0
+monitor=desc:BOE 0x0BCA,2256x1504@60.0,1920x0,1.6
 
 workspace = 1,monitor:desc:Dell Inc. DELL U2415 PVJVW5B70A5S
 workspace = 2,monitor:desc:Dell Inc. DELL U2415 PVJVW5B70A5S
@@ -52,11 +53,6 @@ input {
 
 cursor {
     no_hardware_cursors = true
-}
-
-gestures {
-    workspace_swipe = true
-    workspace_swipe_fingers = 3
 }
 
 general {
