--- a/.config/MangoHud/MangoHud.conf
+++ b/.config/MangoHud/MangoHud.conf
@@ -14,7 +14,7 @@ fps_limit_method=late
 toggle_fps_limit=Shift_L+F1
 background_alpha=0.3
 position=top-right
-toggle_hud=F12
+toggle_hud=Shift+F12
 font_size=28
 font_file=/usr/share/fonts/apple-fonts/SF-Mono-Regular.otf
 font_glyph_ranges=korean, chinese, chinese_simplified, japanese, cyrillic, thai, vietnamese, latin_ext_a, latin_ext_b
