clean hyprland.conf, waybar pavucontrol to wiremix, hyprlock reposition clock

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -11,16 +11,13 @@ exec-once = hyprpaper
 exec-once = hypridle
 exec-once = hyprsunset
 exec-once = waybar
-#exec-once = pipewire
-#exec-once = pipewire-pulse
-#exec-once = wireplumber
-#exec-once = wlsunset -S 7:00 -s 21:00
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 exec-once = wl-clip-persist --clipboard regular
 exec-once = cliphist wipe
 exec-once = packages-history
+exec-once = udiskie --no-config --automount --notify --no-tray
 
 env = HYPRCURSOR_THEME,Posy-Cursor-Mono-Black
 env = HYPRCURSOR_SIZE,32
@@ -28,7 +25,6 @@ env = XCURSOR_THEME,Posy-Cursor-Mono-Black
 env = XCURSOR_SIZE,32
 
 env = AQ_DRM_DEVICES,/dev/dri/nvidia-egpu:/dev/dri/amd-igpu
-#env = AQ_DRM_DEVICES,/dev/dri/amd-igpu
 
 env = LIBVA_DRIVER_NAME,nvidia
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
@@ -41,10 +37,7 @@ opengl {
 }
 
 input {
-    #kb_layout = us
-    kb_layout = us,us
-    kb_variant = ,colemak_dh
-    kb_options = grp:alt_space_toggle
+    kb_layout = us
     touchpad {
         natural_scroll = true
         disable_while_typing = false
@@ -122,11 +115,9 @@ misc {
 }
 
 layerrule = blur,waybar
-windowrule = immediate, title:^(Minecraft\*) 
-windowrulev2 = float, title:^(.*Hyprshot.*)$
-#windowrule = float,class:(org.pulseaudio.pavucontrol)
-#windowrule = center,class:(org.pulseaudio.pavucontrol)
-#windowrule = opacity 0.99 0.99, class:^(zen)$
+#windowrule = immediate, title:^(Minecraft\*)
+windowrule = float, title:^(Hyprshot)$
+windowrule = float, title:^(.*wiremix.*)$
 
 # On lid close: move workspace 4 to Dell and disable BOE
 bindl = , switch:on:Lid Switch, exec, hyprctl dispatch moveworkspacetomonitor 4 "desc:Dell Inc. DELL U2415 PVJVW5B70A5S" && hyprctl keyword monitor "desc:BOE 0x0BCA, disable"
