change wallpaper folders

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,6 +1,11 @@
-monitor=desc:Dell Inc. DELL U2312HM T9MJ3254AUBL,1920x1080@60,-1080x0,1.0,transform,1
-monitor=desc:Dell Inc. DELL U2415 PVJVW5B70A5S,1920x1200@60,0x0,1.0
-monitor=desc:BOE 0x0BCA,2256x1504@60.0,1920x0,1.6
+#source = $XDG_CONFIG_HOME/hypr/monitors.conf
+monitor=desc:Dell Inc. DELL U2312HM T9MJ3254AUBL,1920x1080@60,0x0,1.0,transform,1
+monitor=desc:Dell Inc. DELL U2415 PVJVW5B70A5S,1920x1200@60,1080x208,1.0
+monitor=desc:BOE 0x0BCA,2256x1504@60.0,3000x454,1.6
+
+#monitor=desc:Dell Inc. DELL U2312HM T9MJ3254AUBL,1920x1080@60,0x0,1.0,transform,1
+#monitor=desc:Dell Inc. DELL U2415 PVJVW5B70A5S,1920x1200@60,1080x208,1.0
+#monitor=desc:BOE 0x0BCA,2256x1504@60.0,3000x454,1.6
 
 workspace = 1,monitor:desc:Dell Inc. DELL U2415 PVJVW5B70A5S
 workspace = 2,monitor:desc:Dell Inc. DELL U2415 PVJVW5B70A5S
@@ -37,6 +42,8 @@ opengl {
 }
 
 input {
+    accel_profile = flat
+    sensitivity = 0.15
     kb_layout = us
     touchpad {
         natural_scroll = true
@@ -125,17 +132,18 @@ bindl = , switch:on:Lid Switch, exec, hyprctl dispatch moveworkspacetomonitor 4 
 # On lid open: move workspace 4 back to BOE and re-enable BOE
 bindl = , switch:off:Lid Switch, exec, hyprctl dispatch moveworkspacetomonitor 4 "desc:BOE 0x0BCA" && hyprctl keyword monitor "desc:BOE 0x0BCA, 2256x1504@60.0,0x0,1.6"
 
-bind = SUPER, Q, killactive,
-bind = SUPER, E, exec, $TERMINAL
-bind = SUPER, ESCAPE, exec, waybar-reload
+bind = SUPER, W, killactive,
+bind = SUPER, E, exec, wezterm
 bind = SUPER, B, exec, wallpaper
 bind = SUPER, SPACE, exec, tofi-drun --drun-launch=true
 bind = SUPER, F, fullscreen
-bind = SUPER SHIFT, F, exec, hyprctl dispatch togglefloating active && hyprctl dispatch resizeactive exact 50% 50% && hyprctl dispatch centerwindow
-bind = SUPER, X, exec, powermenu
+bind = SUPER, T, exec, hyprctl dispatch togglefloating active && hyprctl dispatch resizeactive exact 50% 50% && hyprctl dispatch centerwindow
+bind = SUPER, escape, exec, powermenu
 bind = SUPER, C, exec, bemoji
 bind = SUPER, V, exec, cliphist list | tofi -c "$XDG_CONFIG_HOME"/tofi/history-config | cliphist decode | wl-copy
-bind = SUPER, L, exec, toggle_eDP-1
+bind = SUPER SHIFT, SPACE, exec, waybar-reload
+
+
 bind = , XF86AudioMute, exec, volume mute
 binde = , XF86AudioLowerVolume, exec, volume down
 binde = , XF86AudioRaiseVolume, exec, volume up
@@ -149,6 +157,9 @@ binde = , XF86MonBrightnessUp, exec, backlight up
 bind = , Print, exec, hyprshot-gui
 bind = , XF86AudioMedia, exec, record
 binds = ALT, XF86AudioMedia, exec, record-slurp
+
+bind = SUPER, TAB, workspace, e+1
+bind = SUPER SHIFT, TAB, workspace, e-1
 
 bind = SUPER, h, movefocus, l
 bind = SUPER, l, movefocus, r
