--- a/.config/mako/config
+++ b/.config/mako/config
@@ -1,13 +1,14 @@
 font="SF Mono" 12
 border-size=0
-default-timeout=5000
+default-timeout=3000
 ignore-timeout=1
 padding=8
 include=~/.config/mako/mako-colors
 
 [app-name=Volume]
 group-by=app-name
+format=<b>%s</b>\n%b
 
 [app-name=Backlight]
 group-by=app-name
-
+format=<b>%s</b>\n%b
