--- a/.config/matugen/config.toml
+++ b/.config/matugen/config.toml
@@ -54,7 +54,7 @@ input_path = './templates/yazi-theme.toml'
 output_path = '~/.config/yazi/theme.toml'
 
 [templates.equibop]
-input_path = './templates/midnight-discord.css'
+input_path = './templates/midnight-background.theme.css'
 output_path = '~/.config/equibop/themes/midnight-discord.css'
 
 [templates.Obisidan]
