feat: add keyboard layout to hyprlock

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -89,3 +89,15 @@ input-field {
   halign = center
   valign = bottom
 }
+
+# Layout
+label {
+  monitor =
+  text = $LAYOUT
+  color = $on_background
+  font_size = 18
+  font_family = SF Pro Display Bold
+  position = 0, 16
+  halign = center
+  valign = bottom
+}
