feat: update vicinae post exec command, hyprland input and mako template

--- a/.config/hypr/configs/input.conf
+++ b/.config/hypr/configs/input.conf
@@ -6,6 +6,6 @@ input {
   kb_options = grp:alt_space_toggle, caps:swapescape
   touchpad {
     natural_scroll = true
-    disable_while_typing = false
+    disable_while_typing = true
   }
 }
