fix: update random wallpaper keybind

--- a/.config/hypr/configs/binds.conf
+++ b/.config/hypr/configs/binds.conf
@@ -6,7 +6,7 @@ bindl = , switch:off:Lid Switch, exec, hyprctl dispatch moveworkspacetomonitor 4
 
 bind = SUPER, W, killactive,
 bind = SUPER, E, exec, wezterm
-bind = SUPER, B, exec, wallpaper
+bind = SUPER, B, exec, vicinae vicinae://extensions/sovereign/awww-switcher/wprandom
 bind = SUPER, SPACE, exec, vicinae toggle
 bind = SUPER, V, exec, vicinae vicinae://extensions/vicinae/clipboard/history
 bind = SUPER, PERIOD, exec, vicinae vicinae://extensions/vicinae/core/search-emojis
